# search-rivals

./: .gitignore  LICENSE  README.md  bench.sh  pyproject.toml
rivals/: __init__.py  __main__.py  faiss_bench.py  hnsw.py  hnsw_bench.py  mrpt_bench.py
rivals/utils/: __init__.py  constants.py  dataset.py  helpers.py  paths.py
